# dooronline

./: .env  .gitignore  Cargo.toml  minify.rs
migrations/2018-05-21-162118_initial/: up.sql
migrations/2018-05-21-164649_add_admin/: down.sql  up.sql
migrations/2018-05-24-205311_add_log/: down.sql  up.sql
src/: crypto.rs  db.rs  macros.rs  main.rs  minify.rs  models.rs  schema.rs
src/api/: door.rs  log.rs  mod.rs  user.rs
src/models/: admin.rs  log_entry.rs  mod.rs  user.rs
src/views/: admin.rs  api.rs  catchers.rs  index.rs  login.rs  logout.rs  mod.rs  thomas.rs
static/: admin-style.css  admin-style.min.css  style.css  style.min.css
templates/: 400.html.hbs  400.min.html.hbs  401.html.hbs  401.min.html.hbs  403.html.hbs  403.min.html.hbs  404.html.hbs  404.min.html.hbs  500.html.hbs  500.min.html.hbs  admin.html.hbs  admin.min.html.hbs  index.html.hbs  index.min.html.hbs  log.html.hbs  log.min.html.hbs  login.html.hbs  login.min.html.hbs  logout.html.hbs  logout.min.html.hbs  nee_thomas.html.hbs  nee_thomas.min.html.hbs
