[package]
name = "home_site"
version = "0.1.0"
authors = ["luuk <luuk.wester@gmail.com>"]

[dependencies]
rocket = "=0.3.11"
rocket_codegen = "=0.3.11"
sysfs_gpio = "=0.5.3"
dotenv = "=0.13.0"
jsonwebtoken = "2"
argon2rs = "=0.2.5"
rand = "=0.5.1"
serde = "=1.0.66"
serde_derive = "=1.0.66"

[dependencies.chrono]
version = "=0.4.2"
features = ["serde", ]

[dependencies.diesel]
version = "=1.3.0"
default-features = false
features = ["postgres", "chrono", ]

[dependencies.rocket_contrib]
version = "=0.3.11"
default-features = false
features = ["handlebars_templates", ]

[profile.release]
lto = true
