[package]
name = "dooronline"
version = "0.1.0"
authors = ["luuk <luuk.wester@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
sysfs_gpio = "*"
dotenv = "*"
jsonwebtoken = "2"
argon2rs = "*"
rand = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.chrono]
version = "*"
features = ["serde", ]

[dependencies.diesel]
version = "*"
default-features = false
features = ["postgres", "chrono", ]

[dependencies.rocket_contrib]
version = "*"
features = ["json"]
default-features = false

[dependencies.maud]
version = "*"
features = ["rocket", ]

[profile.release]
lto = true
